kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diplom-app
  namespace: diplom-app
spec:
  type: ClusterIP
  selector:
    app: diplom-app
  ports:
    - name: http
      port: 80
      targetPort: http
